fix: bug anomali bottom whitespace

--- a/src/index.css
+++ b/src/index.css
@@ -113,10 +113,10 @@
   display: none;
 }
 
-#root {
+/* #root {
   width: 100vw;
   height: 100vh;
-}
+} */
 
 body {
   margin: 0;
